argocd/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.kube.dev19.eu`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
      middlewares:
        - name: default-headers
    - kind: Rule
      match: Host(`argocd.kube.dev19.eu`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 443
          scheme: h2c
      middlewares:
        - name: default-headers
  tls:
    secretName: argocd-server-tls
